--- a/src/assets/scss/globals.scss
+++ b/src/assets/scss/globals.scss
@@ -1,4 +1,5 @@
-body, html {
+body,
+html {
   font-family: Google Sans, Roboto, Helvetica Neue, sans-serif;
   font-size: 16px;
   font-weight: 400;
